syntax = "proto3";

option go_package = "amusing-x.com/riskservice/riskservice";

package riskservice;

message LoginRiskRequest {
  int64 user_id = 1 [json_name="user_id"];
  string strategy_type = 2 [json_name="strategy_type"];
  string phone = 3 [json_name="phone"];
  string action = 4 [json_name="action"];
}

message LoginRiskReply {
  bool result = 1;
}

